<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.lanwen.raml</groupId>
    <artifactId>rarc</artifactId>
    <version>1.1-SNAPSHOT</version>
    <modules>
        <module>rarc-core</module>
        <module>rarc-maven-plugin</module>
        <module>rarc-example</module>
    </modules>
    <packaging>pom</packaging>

    <name>rest-assured-raml-codegen-root</name>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    
    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>ru.lanwen.raml</groupId>
                <artifactId>rarc-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            
            <dependency>
                <groupId>org.raml</groupId>
                <artifactId>raml-parser</artifactId>
                <version>0.8.13</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.slf4j</groupId>
                        <artifactId>slf4j-log4j12</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <!--https://github.com/square/javapoet-->
            <dependency>
                <groupId>com.squareup</groupId>
                <artifactId>javapoet</artifactId>
                <version>1.5.1</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.4</version>
            </dependency>
            
            <!--MAVEN DEPS-->

            <dependency>
                <groupId>org.apache.maven</groupId>
                <artifactId>maven-plugin-api</artifactId>
                <version>3.2.5</version>
            </dependency>
            
            <dependency>
                <groupId>org.apache.maven</groupId>
                <artifactId>maven-project</artifactId>
                <version>2.2.1</version>
            </dependency>

            <!-- dependencies to annotations -->
            <dependency>
                <groupId>org.apache.maven.plugin-tools</groupId>
                <artifactId>maven-plugin-annotations</artifactId>
                <version>3.4</version>
                <scope>provided</scope>
            </dependency>
            
            <!--TEST DEPS-->

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.12</version>
                <scope>test</scope>
            </dependency>
            
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-all</artifactId>
                <version>1.3</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>1.7.7</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.jsonschema2pojo</groupId>
                <artifactId>jsonschema2pojo-core</artifactId>
                <version>0.4.21</version>
            </dependency>

            <!--https://github.com/TNG/junit-dataprovider/wiki/Getting-started-->
            <dependency>
                <groupId>com.tngtech.java</groupId>
                <artifactId>junit-dataprovider</artifactId>
                <version>1.10.0</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>jaxb2-maven-plugin</artifactId>
                <version>2.2</version>
            </dependency>

            <dependency>
                <groupId>org.apache.maven.shared</groupId>
                <artifactId>maven-invoker</artifactId>
                <version>2.1.1</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>yandex_qa_releases</id>
            <name>Releases</name>
            <url>${releases-repo}</url>
        </repository>
        <snapshotRepository>
            <id>yandex_qa_snapshots</id>
            <name>Snapshots</name>
            <url>${snapshots-repo}</url>
        </snapshotRepository>
    </distributionManagement>

</project>